make sure there's no horizontal scrollbar
We adjust the content anyway.

--- a/static/less/_less-base.less
+++ b/static/less/_less-base.less
@@ -56,6 +56,7 @@ body {
 	font-family: @font-stack;
 	font-size: @font-size / 16*1em;
 	line-height: @line-height / @em;
+	overflow-y: hidden;
 }
 
 /*
